# stm32_cubemx_atlas_joint

./: .gitmodules  components.txt
.cache/clangd/index/: FreeRTOS.h.45DBA71BBD51535A.idx  FreeRTOSConfig.h.25C25C37342B4802.idx  as5600.c.F01E47C770FF8640.idx  as5600.h.14D4743FCAB315B0.idx  as5600_config.h.CFBA89D0B18827E2.idx  as5600_registers.h.218AEB3560AF8575.idx  atlas_config.h.B08FA948B1FB8B4F.idx  atlas_core.h.799AD8B5411C26F2.idx  atlas_data.c.AAC2DA3E2F5706DF.idx  atlas_data.h.26FE954804762CE6.idx  atlas_err.c.937F6F7505AF662F.idx  atlas_err.h.C7408FECD96304BC.idx  atlas_joint_num.h.C34FCD7A4C6D9839.idx  atlas_log.c.6B2CBF25506DFFFA.idx  atlas_log.h.886D76643383E736.idx  atlas_packet.h.DFC8FBBBDA747D3E.idx  (+160 more)
components/: a.sh
components/as5600/: as5600_config.h
components/atlas_core/: atlas_config.h  atlas_core.h  atlas_data.c  atlas_data.h  atlas_err.c  atlas_err.h  atlas_log.c  atlas_packet.h  atlas_path.c  atlas_path.h  atlas_state.h  atlas_status.h  atlas_utility.h
components/atlas_joint/: CMakeLists.txt  atlas_joint.c  atlas_joint.h
components/atlas_joint/common/: CMakeLists.txt  common.h  event.h  manager.c  manager.h  notify.h
components/atlas_joint/joint_task/: CMakeLists.txt  joint_interface.c  joint_manager.c  joint_manager.h  joint_task.c  joint_task.h
components/atlas_joint/packet_task/: packet_manager.c  packet_manager.h  packet_task.c  packet_task.h
components/atlas_joint/system_task/: system_manager.c  system_manager.h  system_task.c
components/atlas_joint/uart_task/: uart_task.c
components/drv8825/: CMakeLists.txt  drv8825.c  drv8825.h  drv8825_config.h
components/ina226/: CMakeLists.txt
components/motor_driver/: motor_driver.c  motor_driver.h
cubemx/: .mxproject  cubemx.ioc
cubemx/cmake/: gcc-arm-none-eabi.cmake
main/: CMakeLists.txt  hooks.c  main.c  nvic.c  syscalls.c
requirements/: components.txt
(+5 files in other folders)
